tests/language_modules/13_contract_blocks/valid/procedure_contracts.vf
module ProcedureContracts

procedure accept(amount: Integer)
requires amount >= 0
ensures true
is
    check amount >= 0
end accept

end ProcedureContracts