tests/language_modules/13_contract_blocks/invalid_syntax/ensures_before_requires.vf
module EnsuresBeforeRequires

function current() returns Integer
ensures result = 1
requires true
is
    return 1
end current

end EnsuresBeforeRequires